@@ -253,11 +253,11 @@ __END__
 =head1 Support
 
 This module is stored in an open L<GitHub
-repository|http://github.com/theory/pgxn-api/>. Feel free to fork and
+repository|http://github.com/pgxn/pgxn-api/>. Feel free to fork and
 contribute!
 
 Please file bug reports via L<GitHub
-Issues|http://github.com/theory/pgxn-api/issues/> or by sending mail to
+Issues|http://github.com/pgxn/pgxn-api/issues/> or by sending mail to
 L<bug-PGXN-API@rt.cpan.org|mailto:bug-PGXN-API@rt.cpan.org>.
 
 =head1 See Also
