@@ -4,6 +4,7 @@ Revision history for Perl extension PGXN::API
       - Updated URI::Template to v0.16 for its support for `{+var}` and
         dropped the nasty hack required to work around the lack of it in
         earlier versions.
+      - Updated GitHub URLs to point to `/pgxn/` rather than `/theory/`.
 
 0.16.2  2012-02-14T06:46:47Z
       - Empty Documentation files are no longer indexed or displayed.
